# crip-crypt

./: Cargo.toml  README.md  main
src/: cli.rs  decrypt.rs  encrypt.rs  help.rs  main.rs
